WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33161
Assertion failure in WebView when using Chinese Simplified IME
https://bugs.webkit.org/show_bug.cgi?id=33161
Summary
Assertion failure in WebView when using Chinese Simplified IME
Alexey Proskuryakov
Reported
2010-01-04 10:57:25 PST
This assertion always fails because IME asks for an out of bounds character position: ASSERT(charPos->dwCharPos == 0 || targetFrame->editor()->hasComposition()); We can't make assertions about IME request arguments, as we don't control their values.
Attachments
proposed patch
(1.49 KB, patch)
2010-01-04 13:22 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-01-04 13:22:34 PST
Created
attachment 45824
[details]
proposed patch
Alexey Proskuryakov
Comment 2
2010-01-04 13:31:11 PST
Committed <
http://trac.webkit.org/changeset/52755
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug