        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=33161
        Assertion failure in WebView when using Chinese Simplified IME

        * WebView.cpp: (WebView::onIMERequestCharPosition): Changed the assertion into release mode
        check. We can't make assertions about arguments passed from outside WebKit.



Canonical link: https://commits.webkit.org/44168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52755 268f45cc-cd09-0410-ab3c-d52691b4dbfc